--- a/assesea/sooncss.css
+++ b/assesea/sooncss.css
@@ -1,11 +1,14 @@
-       body {
+body {
     margin: 0;
     padding: 0;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     min-height: 100vh;
     background-color: #ffffff;
+    color: black; /* Set the text color to black */
+    text-decoration: none; /* Remove the underline from links */
     font-family: 'Varela Round', sans-serif;
 }
 
@@ -43,4 +46,9 @@ p {
     bottom: 30px;
     right: 30px;
     font-size: 15px;
+}
+
+.back-arrow {
+    font-size: 20px;
+    transform: rotate(180deg);
 }
